Corrigiendo configuracion de spring para detectar los nuevos archivos .hbm

--- a/ActividadesWeb/src/main/webapp/WEB-INF/web.xml
+++ b/ActividadesWeb/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,6 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>persona</servlet-name>
-    <url-pattern>/persona/rest/*</url-pattern>
+    <url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
 </web-app>
