--- a/ActividadesWeb/src/main/webapp/WEB-INF/web.xml
+++ b/ActividadesWeb/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,24 @@
 		<servlet-name>tipoactividad</servlet-name>
 		<url-pattern>/tipoactividad/*</url-pattern>
 	</servlet-mapping>
+	<servlet>
+		<servlet-name>semestre</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>semestre</servlet-name>
+		<url-pattern>/semestre/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>dsc</servlet-name>
+		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>dsc</servlet-name>
+		<url-pattern>/dsc/*</url-pattern>
+	</servlet-mapping>
 	<filter>
 		<filter-name>CorsFilter</filter-name>
 		<filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
